--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Affiliate Academy Platform",
   "scripts": {
-    "build": "cd Client && npm install && npm run build",
+    "build": "cd Client && npm install && npm run build && cd .. && xcopy /E /I /Y Client\\dist build",
     "start": "cd Server && npm install && node server.js",
     "dev:client": "cd Client && npm run dev",
     "dev:server": "cd Server && npm run dev"
