--- a/Client/package.json
+++ b/Client/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.11.8",
+    "@supabase/supabase-js": "^2.76.1",
     "axios": "^1.13.0",
     "bootstrap": "^5.3.8",
     "react": "^19.1.1",
