--- a/vercel.json
+++ b/vercel.json
@@ -1,25 +1,11 @@
 {
-  "version": 2,
-  "builds": [
-    {
-      "src": "Client/package.json",
-      "use": "@vercel/static-build",
-      "config": {
-        "distDir": "dist"
-      }
-    }
-  ],
-  "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "/Client/$1"
-    }
-  ],
+  "buildCommand": "cd Client && npm run build",
+  "outputDirectory": "Client/dist",
+  "installCommand": "cd Client && npm install",
   "rewrites": [
     {
       "source": "/(.*)",
-      "destination": "/Client/index.html"
+      "destination": "/index.html"
     }
-  ],
-  "outputDirectory": "Client/dist"
+  ]
 }
