feat: Implement admin authentication and management features
- Added AdminContext and AdminProvider for managing admin state and authentication.
- Created admin login functionality with JWT token handling.
- Implemented protected routes for admin access.
- Developed admin management features including user listing, promotion, and demotion.
- Integrated email sending service using Nodemailer for admin notifications.
- Established API routes for admin login, user management, and dashboard data retrieval.
- Enhanced server setup with improved CORS configuration and health check endpoint.
- Added seed script for initializing admin user in the database.
- Created HTML email template for sending notifications to admins.

--- a/Server/package.json
+++ b/Server/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.78.0",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.3",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
@@ -24,6 +25,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "nodemailer": "^7.0.10"
   }
 }
