--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,9 @@
 {
-  "buildCommand": "cd Client && npm run build",
+  "version": 2,
+  "buildCommand": "cd Client && npm install && npm run build",
   "outputDirectory": "Client/dist",
-  "installCommand": "cd Client && npm install",
+  "installCommand": "npm install",
+  "framework": null,
   "rewrites": [
     {
       "source": "/AdminLogin",
